@@ -523,11 +523,20 @@ static void PrintGenericVector(SEXP s, SEXP env)
                 Rprintf("%s\n", tagbuf);
                 if (isObject(VECTOR_ELT(s, i)))
                 {
+                    SEXP x = VECTOR_ELT(s, i);
+                    int nprot = 0;
+                    if (TYPEOF(x) == LANGSXP)
+                    {
+                        // quote(x)  to not accidentally evaluate it with newcall() below:
+                        x = PROTECT(lang2(R_Primitive("quote"), x));
+                        nprot++;
+                    }
                     /* need to preserve tagbuf */
                     strcpy(save, tagbuf);
-                    SETCADR(newcall, VECTOR_ELT(s, i));
+                    SETCADR(newcall, x);
                     eval(newcall, env);
                     strcpy(tagbuf, save);
+                    UNPROTECT(nprot);
                 }
                 else
                     PrintValueRec(VECTOR_ELT(s, i), env);
@@ -696,8 +705,16 @@ static void printList(SEXP s, SEXP env)
             Rprintf("%s\n", tagbuf);
             if (isObject(CAR(s)))
             {
-                SETCADR(newcall, CAR(s));
+                SEXP x = CAR(s);
+                int nprot = 0;
+                if (TYPEOF(x) == LANGSXP)
+                {
+                    x = PROTECT(lang2(R_Primitive("quote"), x));
+                    nprot++;
+                }
+                SETCADR(newcall, x);
                 eval(newcall, env);
+                UNPROTECT(nprot);
             }
             else
                 PrintValueRec(CAR(s), env);
@@ -1020,16 +1037,24 @@ static void printAttributes(SEXP s, SEXP env, Rboolean useSlots)
                     na_width_noquote = R_print.na_width_noquote;
                 Rprt_adj right = R_print.right;
 
+                SEXP x = CAR(a);
+                int nprot = 0;
+                if (TYPEOF(x) == LANGSXP)
+                {
+                    x = PROTECT(lang2(R_Primitive("quote"), x));
+                    nprot++;
+                }
                 PROTECT(t = s = allocList(3));
+                nprot++;
                 SET_TYPEOF(s, LANGSXP);
                 SETCAR(t, install("print"));
                 t = CDR(t);
-                SETCAR(t, CAR(a));
+                SETCAR(t, x);
                 t = CDR(t);
                 SETCAR(t, ScalarInteger(digits));
                 SET_TAG(t, install("digits"));
                 eval(s, env);
-                UNPROTECT(1);
+                UNPROTECT(nprot);
                 R_print.quote = quote;
                 R_print.right = right;
                 R_print.digits = digits;
